# utilcase

./: Cargo.toml  README.md
collections/utilcase/: Cargo.toml
collections/utilcase-wasm/: Cargo.toml
collections/utilcase-wasm/src/: lib.rs
collections/utilcase-wasm/src/charcase/: endofcase.rs  groupcase.rs  identcase.rs  lowercase.rs  numbercase.rs  quotecase.rs  spacecase.rs  underscorecase.rs  uppercase.rs
collections/utilcase-wasm/src/strcase/: camelcase.rs  capitalcase.rs  lowercase.rs  snakecase.rs  uppercase.rs
collections/utilcase/benches/charcase/: endofcase.rs  groupcase.rs  identcase.rs  lowercase.rs  numbercase.rs  quotecase.rs  spacecase.rs  underscorecase.rs  uppercase.rs
collections/utilcase/benches/strcase/: camelcase.rs  capitalcase.rs  lowercase.rs  snakecase.rs  uppercase.rs
collections/utilcase/src/: lib.rs
collections/utilcase/src/charcase/: endofcase.rs  groupcase.rs  identcase.rs  lowercase.rs  mod.rs  numbercase.rs  quotecase.rs  spacecase.rs  underscorecase.rs  uppercase.rs
collections/utilcase/src/strcase/: camelcase.rs  capitalcase.rs  lowercase.rs  mod.rs  snakecase.rs  uppercase.rs
