[package]
name = "utilcase-wasm"
version = "0.0.0"
authors = ["monsieurbadia <iam@monsieurbadia.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = ["console_error_panic_hook"]

[dependencies]
utilcase = { path = "../utilcase" }
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2.74"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.24"
criterion = "0.3"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
